syntax = "proto3";
package freym.crud.delivery;
import "crud/delivery/shared.proto";

message GetDataRequest {
	string type = 1;
	AuthData auth = 2;
	string id = 3;
	DataFilter filter = 4;
	bool return_empty_data_if_not_found = 5;
	DataWait wait = 6;
	bool use_strong_consistency = 7;
	DeploymentTarget target = 8;
}

message GetDataResponse {
	Data result = 1;
}

message GetDataListRequest {
	string type = 1;
	AuthData auth = 2;
	int64 limit = 3;
	int64 page = 4;
	DataFilter filter = 7;
	repeated DataOrder order = 8;
	bool use_strong_consistency = 9;
	DeploymentTarget target = 10;
	DataListWait wait = 11;
}

message GetDataListResponse {
	repeated Data result = 1;
	int64 limit = 2;
	int64 page = 3;
	int64 total = 4;
}
